# now-play-backend

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
backend/: .env.example  README.md  db.sqlite3.old  requirements.txt  setup_backend.ps1
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/admin_panel/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/admin_panel/migrations/: 0001_initial.py
backend/analytics/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/analytics/migrations/: 0001_initial.py
backend/config/: settings.py  tests.py  urls.py
backend/core/: models.py  tests.py
backend/core/management/commands/: seed.py
backend/core/migrations/: 0001_initial.py
backend/music/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/music/management/commands/: import_music.py
backend/music/migrations/: 0001_initial.py
backend/scripts/: create_superuser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Navbar.jsx  PlayerBar.jsx
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Home.jsx  Login.jsx  Upload.jsx
my_project/my_project/: settings.py
