[tool.poetry]
name = "now-play-backend"
version = "0.1.0"
description = "Now Play for Creators - Django REST backend scaffold"
authors = ["Dev Team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^6.0"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.2"
mutagen = "^1.46"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
